--- a/packages/core/lib/views/layouts/iframe.hbs
+++ b/packages/core/lib/views/layouts/iframe.hbs
@@ -31,10 +31,10 @@
     {{#block "body"}}{{/block}}
     {{#if standaloneUrl}}
     <a class="MiyagiIframe-newTabLink" href="{{standaloneUrl}}" target="_blank" rel="noopener">
-      Open in new tab
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
         stroke-linecap="round" stroke-linejoin="round" focusable="false" aria-hidden="true">
         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3" /></svg>
+      Open
     </a>
     {{/if}}
   </body>
