--- a/packages/core/assets/css/iframe.css
+++ b/packages/core/assets/css/iframe.css
@@ -1,13 +1,46 @@
 :root {
   --Miyagi-fontFamily: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto",
     "Helvetica", "Arial", sans-serif;
-  --Miyagi-color: #222;
-  --Miyagi-color-negative: #d9173e;
-  --Miyagi-color-warning: purple;
-  --Miyagi-color-positive: #690;
-  --Miyagi-colorHeadlines: var(--Miyagi-color);
+  --Miyagi-color-Negative: #d9173e;
+  --Miyagi-color-Positive: #690;
+
+  /* light */
+  --Miyagi-color-Grey-1: hsl(0, 0%, 12%);
+  --Miyagi-color-Grey-2: hsl(0, 0%, 36%);
+  --Miyagi-color-Grey-3: hsl(0, 0%, 56%);
+  --Miyagi-color-Grey-4: hsl(0, 0%, 86%);
+  --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
+  --Miyagi-color-BG: hsl(0, 0%, 100%);
+
+  /* general */
+  --Miyagi-color-Background: var(--Miyagi-color-BG);
+  --Miyagi-color-Text: var(--Miyagi-color-Grey-1);
+  --Miyagi-color-TextSecondary: var(--Miyagi-color-Grey-2);
+  --Miyagi-color-TextTertiary: var(--Miyagi-color-Grey-3);
+  --Miyagi-color-Link: var(--Miyagi-color-Grey-1);
+  --Miyagi-color-Outline: var(--Miyagi-color-Grey-4);
+
+  /* specific */
+  --Miyagi-color-NewTabLink: var(--Miyagi-color-Link);
+  --Miyagi-color-Headline1: var(--Miyagi-color-Grey-1);
+  --Miyagi-color-Headline2: var(--Miyagi-color-Grey-1);
+  --Miyagi-color-Headline2-divider: var(--Miyagi-color-Outline);
+  --Miyagi-color-Code-background: var(--Miyagi-color-Grey-5);
+  --Miyagi-color-Code-outline: var(--Miyagi-color-Outline);
   --Miyagi-transition: all 0.15s ease;
   --Miyagi-spacing: 40px;
+}
+
+.MiyagiTheme--dark {
+  --Miyagi-color-Grey-1: hsl(0, 0%, 100%);
+  --Miyagi-color-Grey-2: hsl(0, 0%, 80%);
+  --Miyagi-color-Grey-3: hsl(0, 0%, 60%);
+  --Miyagi-color-Grey-4: hsl(0, 0%, 26%);
+  --Miyagi-color-Grey-5: hsl(0, 0%, 16%);
+  --Miyagi-color-BG: hsl(0, 0%, 12%);
+  --Miyagi-color-Negative: #ff305a;
+  --Miyagi-color-Warning: #b578b5;
+  --Miyagi-color-Positive: #8dd203;
 }
 
 .MiyagiContent *,
@@ -22,6 +55,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background: var(--Miyagi-color-Background);
 }
 
 .MiyagiWrapper {
@@ -32,25 +66,32 @@ body {
 
 .MiyagiContent,
 .MiyagiIframe-newTabLink,
-.MiyagiComponent-head {
-  color: var(--Miyagi-color);
+.MiyagiContent .MiyagiComponent-head {
   font-family: var(--Miyagi-fontFamily);
   line-height: 1;
 }
 
-.MiyagiContent a,
-.MiyagiIframe-newTabLink {
-  color: var(--Miyagi-color);
+.MiyagiContent {
+  color: var(--Miyagi-color-Text);
 }
 
 .MiyagiContent a {
+  color: var(--Miyagi-color-Link);
   text-decoration: underline;
+}
+
+.MiyagiContent code[class*="language-"],
+.MiyagiContent pre[class*="language-"] {
+  text-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
 }
 
 .MiyagiContent .MiyagiDocumentation code,
 .MiyagiContent .Miyagi-code code,
 .MiyagiContent :not(pre) > code[class*="language-"] {
   font-size-adjust: 0.525;
+  text-shadow: none;
 }
 
 .MiyagiContent .MiyagiDocumentation,
@@ -69,7 +110,7 @@ body {
 }
 
 .MiyagiContent .MiyagiDocumentation h1 {
-  color: var(--Miyagi-colorHeadlines);
+  color: var(--Miyagi-color-Headline1);
   font-size: 2.4em;
   font-weight: bold;
   line-height: 1;
@@ -87,7 +128,7 @@ body {
   margin-left: 0;
 }
 
-.MiyagiComponent-headMeta > *:not(:first-child) {
+.MiyagiContent .MiyagiComponent-headMeta > *:not(:first-child) {
   margin-left: 15px;
   padding-left: 15px;
   border-left: 1px solid;
@@ -103,14 +144,14 @@ body {
 
 .MiyagiContent .Miyagi-sectionTitle {
   align-items: center;
-  color: var(--Miyagi-colorHeadlines);
+  color: var(--Miyagi-color-Headline2);
   display: flex;
   font-size: 1.6em;
   margin: 2em 0 1em;
 }
 
 .MiyagiContent .Miyagi-sectionTitle::after {
-  background: #ddd;
+  background: var(--Miyagi-color-Headline2-divider);
   content: "";
   flex: 1;
   height: 1px;
@@ -122,7 +163,7 @@ body {
 }
 
 .MiyagiContent .MiyagiInformation-attr {
-  color: #767676;
+  color: var(--Miyagi-color-TextSecondary);
   font-family: var(--Miyagi-fontFamily);
   font-size: 0.875em;
   letter-spacing: 0.0375em;
@@ -139,11 +180,7 @@ body {
   font-weight: 600;
 }
 
-.MiyagiComponent:not(:last-child) {
-  margin-bottom: calc(2 * var(--Miyagi-spacing));
-}
-
-.MiyagiStatus::before {
+.MiyagiContent .MiyagiStatus::before {
   --size: 0.7em;
 
   border-radius: 50%;
@@ -154,56 +191,17 @@ body {
   width: var(--size);
 }
 
-.MiyagiStatus--valid::before {
-  background-color: var(--Miyagi-color-positive);
+.MiyagiContent .MiyagiStatus--valid::before {
+  background-color: var(--Miyagi-color-Positive);
 }
 
-.MiyagiStatus--invalid::before {
-  background-color: var(--Miyagi-color-negative);
-}
-
-.MiyagiComponent-head {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.MiyagiComponent-headMeta {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  margin-left: 30px;
-}
-
-.MiyagiComponent-file {
-  align-items: center;
-  color: #767676;
-  display: inline-flex;
-  flex-wrap: wrap;
-  font-family: var(--Miyagi-fontFamily);
-  font-size: 0.875em;
-  letter-spacing: 0.0375em;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.MiyagiComponent-file:hover,
-.MiyagiComponent-file:focus,
-.MiyagiComponent-file:active {
-  text-decoration: underline;
-}
-
-.MiyagiComponent-fileFolders {
-  color: #bbb;
-}
-
-.MiyagiComponent-html {
-  margin: calc(var(--Miyagi-spacing) / 2) 0 0;
+.MiyagiContent .MiyagiStatus--invalid::before {
+  background-color: var(--Miyagi-color-Negative);
 }
 
 .MiyagiContent .MiyagiError {
   align-items: center;
-  color: var(--Miyagi-color-negative);
+  color: var(--Miyagi-color-Negative);
   display: flex;
   height: 100%;
   justify-content: center;
@@ -211,32 +209,16 @@ body {
 }
 
 .MiyagiContent .MiyagiErrorMessage {
-  color: var(--Miyagi-color-negative);
+  color: var(--Miyagi-color-Negative);
   margin: 1.5em 0;
 }
 
-.MiyagiComponentView {
-  border: 1px solid #ddd;
-  box-sizing: border-box;
-  height: calc(100vh - 2 * var(--Miyagi-spacing));
-  overflow: auto;
-  resize: both;
-  width: 100%;
-}
-
 .MiyagiIframe-newTabLink {
+  color: var(--Miyagi-color-NewTabLink);
   align-items: center;
   display: flex;
   font-weight: normal;
   text-decoration: underline;
-}
-
-.MiyagiWrapper ~ .MiyagiIframe-newTabLink {
-  line-height: 40px;
-  position: absolute;
-  right: 40px;
-  top: 0;
-  font-size: 14px;
 }
 
 .MiyagiIframe-newTabLink svg {
@@ -245,18 +227,9 @@ body {
   height: var(--size);
   margin-right: 0.5em;
   width: var(--size);
-}
-
-.MiyagiContent .Miyagi-code,
-.MiyagiContent :not(pre) > code[class*="language-"] {
-  border: 1px solid #ddd;
-  padding: calc(var(--Miyagi-spacing) / 2);
-  background: #f8f8f8;
-}
-
-.MiyagiContent .Miyagi-code,
-.MiyagiContent pre[class*="language-"] {
-  font-size: 0.875em;
+  stroke: currentColor;
+  stroke-width: 2px;
+  fill: none;
 }
 
 .MiyagiContent .MiyagiTabs-nav {
@@ -280,10 +253,27 @@ body {
 }
 
 .MiyagiContent .MiyagiTabs-button[aria-selected="true"],
+.MiyagiContent pre[class*="language-"],
+.MiyagiContent .Miyagi-code,
+.MiyagiContent :not(pre) > code[class*="language-"] {
+  background: var(--Miyagi-color-Code-background);
+}
+
+.MiyagiContent .MiyagiTabs-button[aria-selected="true"],
 .MiyagiContent :not(pre) > code[class*="language-"],
 .MiyagiContent pre[class*="language-"] {
-  background: #f8f8f8;
-  border-color: #ddd;
+  border-color: var(--Miyagi-color-Code-outline);
+}
+
+.MiyagiContent .Miyagi-code,
+.MiyagiContent :not(pre) > code[class*="language-"] {
+  border: 1px solid var(--Miyagi-color-Code-outline);
+  padding: calc(var(--Miyagi-spacing) / 2);
+}
+
+.MiyagiContent .Miyagi-code,
+.MiyagiContent pre[class*="language-"] {
+  font-size: 0.875em;
 }
 
 .MiyagiContent .MiyagiTabs-tab[hidden] {
@@ -292,6 +282,66 @@ body {
 
 .MiyagiContent .MiyagiTabs-tab > *:first-child {
   margin-top: 0;
+}
+
+.MiyagiComponent:not(:last-child) {
+  margin-bottom: calc(2 * var(--Miyagi-spacing));
+}
+
+.MiyagiComponent .MiyagiComponent-head {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.MiyagiComponent .MiyagiComponent-headMeta {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-left: 30px;
+}
+
+.MiyagiComponent .MiyagiComponent-file {
+  align-items: center;
+  color: var(--Miyagi-color-TextSecondary);
+  display: inline-flex;
+  flex-wrap: wrap;
+  font-family: var(--Miyagi-fontFamily);
+  font-size: 0.875em;
+  letter-spacing: 0.0375em;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.MiyagiComponent .MiyagiComponent-file:hover,
+.MiyagiComponent .MiyagiComponent-file:focus,
+.MiyagiComponent .MiyagiComponent-file:active {
+  text-decoration: underline;
+}
+
+.MiyagiComponent .MiyagiComponent-fileFolders {
+  color: var(--Miyagi-color-TextTertiary);
+}
+
+.MiyagiComponent .MiyagiComponent-html {
+  margin: calc(var(--Miyagi-spacing) / 2) 0 0;
+}
+
+.MiyagiComponentView {
+  border: 1px solid var(--Miyagi-color-Outline);
+  box-sizing: border-box;
+  height: calc(100vh - 2 * var(--Miyagi-spacing));
+  overflow: auto;
+  resize: both;
+  width: 100%;
+}
+
+.MiyagiWrapper ~ .MiyagiIframe-newTabLink {
+  line-height: 40px;
+  position: absolute;
+  right: 40px;
+  top: 0;
+  font-size: 14px;
 }
 
 @media screen and (prefers-reduced-motion) {
