--- a/packages/core/lib/views/iframe_component.hbs
+++ b/packages/core/lib/views/iframe_component.hbs
@@ -73,22 +73,25 @@
       </div>
       {{#each variations}}
         <div class="MiyagiComponent">
-          <div class="MiyagiComponent-head">
-            <a href="{{ this.url }}" class="MiyagiComponent-file">{{this.variation}}</a>
-            <div class="MiyagiComponent-headMeta">
-              {{#if schemaValidation}}
-                <p class="MiyagiComponent-schemaValidation">
-                  <span class="MiyagiStatus MiyagiStatus--{{#if schemaValidation.valid}}valid{{else}}invalid{{/if}}">
-                    Schema
-                  </span>
-                </p>
-              {{/if}}
-              <a class="MiyagiIframe-newTabLink" href="{{standaloneUrl}}" target="_blank" rel="noopener">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" focusable="false" aria-hidden="true">
-                  <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3" /></svg>
-                Open
-              </a>
+          <div class="MiyagiContent">
+            <div class="MiyagiComponent-head">
+              <a href="{{ this.url }}" class="MiyagiComponent-file">{{this.variation}}</a>
+              <div class="MiyagiComponent-headMeta">
+                {{#if schemaValidation}}
+                  <p class="MiyagiComponent-schemaValidation">
+                    <span class="MiyagiStatus MiyagiStatus--{{#if schemaValidation.valid}}valid{{else}}invalid{{/if}}">
+                      Schema
+                    </span>
+                  </p>
+                {{/if}}
+                <a class="MiyagiIframe-newTabLink" href="{{standaloneUrl}}" target="_blank" rel="noopener">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" focusable="false"
+                    aria-hidden="true">
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3" /></svg>
+                  Open
+                </a>
+              </div>
             </div>
           </div>
           <div class="MiyagiComponent-html">
