--- a/packages/core/lib/views/iframe_component_variation.hbs
+++ b/packages/core/lib/views/iframe_component_variation.hbs
@@ -2,7 +2,7 @@
   {{#content "body"}}
     <div class="MiyagiWrapper">
       <div id="MiyagiComponent" class="MiyagiComponentView">
-        <iframe src="{{standaloneUrl}}" frameborder="0" class="MiyagiComponentView-iframe" title="Variation"></iframe>
+        <iframe src="{{standaloneUrl}}" frameborder="0" class="MiyagiComponentView-iframe" title="Variation" id="iframe"></iframe>
       </div>
     </div>
     <script>
