--- a/packages/core/assets/css/iframe/styleguide/index.css
+++ b/packages/core/assets/css/iframe/styleguide/index.css
@@ -60,17 +60,14 @@
 }
 
 .MiyagiContent .MiyagiCustomProp-details {
-  --bg-color: #f5f5f5;
-  --outline-color: #ddd;
-
   position: absolute;
   bottom: calc(100% + 15px);
   padding: 15px;
   margin: 0;
   z-index: 1;
-  background: var(--bg-color);
+  background: var(--Miyagi-color-bg-Tooltip);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  outline: 1px solid var(--outline-color);
+  outline: 1px solid var(--Miyagi-color-outline-Tooltip);
   box-sizing: border-box;
   font-size: 14px;
   display: none;
@@ -86,11 +83,6 @@
 
 [dir="rtl"] .MiyagiContent .MiyagiCustomProp-details {
   right: 0;
-}
-
-.MiyagiTheme--dark .MiyagiContent .MiyagiCustomProp-details {
-  --bg-color: #333;
-  --outline-color: #444;
 }
 
 @keyframes fadeIn {
@@ -121,12 +113,12 @@
 }
 
 .MiyagiContent .MiyagiCustomProp-details::before {
-  border-top-color: var(--outline-color);
+  border-top-color: var(--Miyagi-color-outline-Tooltip);
   top: 100%;
 }
 
 .MiyagiContent .MiyagiCustomProp-details::after {
-  border-top-color: var(--bg-color);
+  border-top-color: var(--Miyagi-color-bg-Tooltip);
   top: calc(100% - 2px);
 }
 
