--- a/packages/core/assets/css/main/tokens.css
+++ b/packages/core/assets/css/main/tokens.css
@@ -3,24 +3,10 @@ html {
     "Helvetica", "Arial", sans-serif;
   --Miyagi-fontSize: 1.6rem;
   --Miyagi-lineHeight: 1.5;
-
-  /* light */
-  --Miyagi-color-Grey-1: hsl(0, 0%, 12%);
-  --Miyagi-color-Grey-2: hsl(0, 0%, 36%);
-  --Miyagi-color-Grey-3: hsl(0, 0%, 56%);
-  --Miyagi-color-Grey-4: hsl(0, 0%, 86%);
-  --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
-
-  /* colors */
-  --Miyagi-color-Background: var(--Miyagi-color-Grey-5);
-  --Miyagi-color-Background2: #fff;
-  --Miyagi-color-Text: var(--Miyagi-color-Grey-2);
-  --Miyagi-color-Link: var(--Miyagi-color-Grey-1);
-  --Miyagi-color-Link-active: var(--Miyagi-color-Grey-5);
-  --Miyagi-color-Link-active-background: var(--Miyagi-color-Link);
-  --Miyagi-color-Negative: #d9173e;
-  --Miyagi-color-Warning: purple;
-  --Miyagi-color-Positive: #690;
+  --Miyagi-color-Text-internal: var(--Miyagi-color-Grey-2);
+  --Miyagi-color-Link-internal: var(--Miyagi-color-Grey-1);
+  --Miyagi-color-Link-active-internal: var(--Miyagi-color-Grey-5);
+  --Miyagi-color-Link-active-background-internal: var(--Miyagi-color-Link);
 
   /* misc */
   --Miyagi-borderRadius: 0.25rem;
@@ -31,6 +17,18 @@ html {
   --Miyagi-toggle-transition: transform 0.15s ease;
   --Miyagi-toggle-width: 1em;
   --Miyagi-spacing: var(--Miyagi-spacing-y);
+
+  /* light */
+  --Miyagi-color-Grey-1: hsl(0, 0%, 12%);
+  --Miyagi-color-Grey-2: hsl(0, 0%, 36%);
+  --Miyagi-color-Grey-3: hsl(0, 0%, 56%);
+  --Miyagi-color-Grey-4: hsl(0, 0%, 86%);
+  --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
+  --Miyagi-color-Background-internal: var(--Miyagi-color-Grey-5);
+  --Miyagi-color-Background2: #fff;
+  --Miyagi-color-Negative: #d9173e;
+  --Miyagi-color-Warning: purple;
+  --Miyagi-color-Positive: #690;
 }
 
 html[dir="ltr"] {
@@ -45,13 +43,42 @@ html[dir="rtl"] {
   --Miyagi-toggle-transition-opened: translate(25%, -75%) rotate(-135deg);
 }
 
-.MiyagiTheme--dark {
+@media (prefers-color-scheme: dark) {
+  html {
+    --Miyagi-color-Grey-1: hsl(0, 0%, 100%);
+    --Miyagi-color-Grey-2: hsl(0, 0%, 80%);
+    --Miyagi-color-Grey-3: hsl(0, 0%, 60%);
+    --Miyagi-color-Grey-4: hsl(0, 0%, 26%);
+    --Miyagi-color-Grey-5: hsl(0, 0%, 16%);
+    --Miyagi-color-Background-internal: hsl(0, 0%, 10%);
+    --Miyagi-color-Background2: hsl(0, 0%, 12%);
+    --Miyagi-color-Negative: #ff305a;
+    --Miyagi-color-Warning: #b578b5;
+    --Miyagi-color-Positive: #8dd203;
+  }
+}
+
+.theme-light {
+  /* light */
+  --Miyagi-color-Grey-1: hsl(0, 0%, 12%);
+  --Miyagi-color-Grey-2: hsl(0, 0%, 36%);
+  --Miyagi-color-Grey-3: hsl(0, 0%, 56%);
+  --Miyagi-color-Grey-4: hsl(0, 0%, 86%);
+  --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
+  --Miyagi-color-Background-internal: var(--Miyagi-color-Grey-5);
+  --Miyagi-color-Background2: #fff;
+  --Miyagi-color-Negative: #d9173e;
+  --Miyagi-color-Warning: purple;
+  --Miyagi-color-Positive: #690;
+}
+
+.theme-dark {
   --Miyagi-color-Grey-1: hsl(0, 0%, 100%);
   --Miyagi-color-Grey-2: hsl(0, 0%, 80%);
   --Miyagi-color-Grey-3: hsl(0, 0%, 60%);
   --Miyagi-color-Grey-4: hsl(0, 0%, 26%);
   --Miyagi-color-Grey-5: hsl(0, 0%, 16%);
-  --Miyagi-color-Background: hsl(0, 0%, 10%);
+  --Miyagi-color-Background-internal: hsl(0, 0%, 10%);
   --Miyagi-color-Background2: hsl(0, 0%, 12%);
   --Miyagi-color-Negative: #ff305a;
   --Miyagi-color-Warning: #b578b5;
