--- a/packages/core/lib/views/main.hbs
+++ b/packages/core/lib/views/main.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="MiyagiTheme--{{theme.mode}}" dir="{{uiTextDirection}}">
+<html lang="en" class="theme-{{theme.mode}}" dir="{{uiTextDirection}}">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,width=device-width">
+    <meta name="color-scheme" content="dark light">
     <title>{{userProjectName}}</title>
     <base href="{{basePath}}" />
     <script src="{{projectName}}/js/main{{#if isBuild}}.build{{/if}}.js" {{#if miyagiDev}}type="module"
@@ -10,14 +11,38 @@
     <link rel="stylesheet" href="{{projectName}}/css/main.css">
     <style>
       html {
-        {{#if theme.navigation}}
-          {{#if theme.navigation.colorText}}--Miyagi-color-Text: {{theme.navigation.colorText}};{{/if}}
-          {{#if theme.navigation.colorBackground}}--Miyagi-color-Background: {{theme.navigation.colorBackground}};{{/if}}
-          {{#if theme.navigation.colorLinks}}--Miyagi-color-Link: {{theme.navigation.colorLinks}};{{/if}}
-          {{#if theme.navigation.colorLinksActive}}--Miyagi-color-Link-active: {{theme.navigation.colorLinksActive}};{{/if}}
-          {{#if theme.navigation.colorLinksActiveBackground}}--Miyagi-color-Link-active-background: {{theme.navigation.colorLinksActiveBackground}};{{/if}}
-        {{/if}}
         {{#if theme.fontFamily}}--Miyagi-fontFamily: {{theme.fontFamily}};{{/if}}
+        {{#if theme.light.navigation.colorText}}--Miyagi-color-Text: {{theme.light.navigation.colorText}};{{/if}}
+        {{#if theme.light.navigation.colorBackground}}--Miyagi-color-Background: {{theme.light.navigation.colorBackground}};{{/if}}
+        {{#if theme.light.navigation.colorLinks}}--Miyagi-color-Link: {{theme.light.navigation.colorLinks}};{{/if}}
+        {{#if theme.light.navigation.colorLinksActive}}--Miyagi-color-Link-active: {{theme.light.navigation.colorLinksActive}};{{/if}}
+        {{#if theme.light.navigation.colorLinksActiveBackground}}--Miyagi-color-Link-active-background: {{theme.light.navigation.colorLinksActiveBackground}};{{/if}}
+      }
+
+      @media (prefers-color-scheme: dark) {
+        html {
+          {{#if theme.dark.navigation.colorText}}--Miyagi-color-Text: {{theme.dark.navigation.colorText}};{{/if}}
+          {{#if theme.dark.navigation.colorBackground}}--Miyagi-color-Background: {{theme.dark.navigation.colorBackground}};{{/if}}
+          {{#if theme.dark.navigation.colorLinks}}--Miyagi-color-Link: {{theme.dark.navigation.colorLinks}};{{/if}}
+          {{#if theme.dark.navigation.colorLinksActive}}--Miyagi-color-Link-active: {{theme.dark.navigation.colorLinksActive}};{{/if}}
+          {{#if theme.dark.navigation.colorLinksActiveBackground}}--Miyagi-color-Link-active-background: {{theme.dark.navigation.colorLinksActiveBackground}};{{/if}}
+        }
+      }
+
+      .theme-light {
+        {{#if theme.light.navigation.colorText}}--Miyagi-color-Text: {{theme.light.navigation.colorText}};{{/if}}
+        {{#if theme.light.navigation.colorBackground}}--Miyagi-color-Background: {{theme.light.navigation.colorBackground}};{{/if}}
+        {{#if theme.light.navigation.colorLinks}}--Miyagi-color-Link: {{theme.light.navigation.colorLinks}};{{/if}}
+        {{#if theme.light.navigation.colorLinksActive}}--Miyagi-color-Link-active: {{theme.light.navigation.colorLinksActive}};{{/if}}
+        {{#if theme.light.navigation.colorLinksActiveBackground}}--Miyagi-color-Link-active-background: {{theme.light.navigation.colorLinksActiveBackground}};{{/if}}
+      }
+
+      .theme-dark {
+        {{#if theme.dark.navigation.colorText}}--Miyagi-color-Text: {{theme.dark.navigation.colorText}};{{/if}}
+        {{#if theme.dark.navigation.colorBackground}}--Miyagi-color-Background: {{theme.dark.navigation.colorBackground}};{{/if}}
+        {{#if theme.dark.navigation.colorLinks}}--Miyagi-color-Link: {{theme.dark.navigation.colorLinks}};{{/if}}
+        {{#if theme.dark.navigation.colorLinksActive}}--Miyagi-color-Link-active: {{theme.dark.navigation.colorLinksActive}};{{/if}}
+        {{#if theme.dark.navigation.colorLinksActiveBackground}}--Miyagi-color-Link-active-background: {{theme.dark.navigation.colorLinksActiveBackground}};{{/if}}
       }
     </style>
     <style>
@@ -27,10 +52,25 @@
   <body>
     <nav class="Nav">
       <h1 class="Nav-title">
-        <a class="Menu-link Menu-link--showAll{{#if theme.logo}} has-logo{{/if}}" href="{{ indexPath }}"
+        <a class="Menu-link Menu-link--showAll{{#if theme.light.logo}} has-logo{{/if}}" href="{{ indexPath }}"
           target="iframe" {{#if showAll }} aria-current="page" {{/if}}>
-          {{#if theme.logo}}
-            <img class="Nav-projectLogo" src="{{ theme.logo }}" alt="{{ userProjectName }}">
+          {{#if theme.light.logo}}
+            <picture class="Nav-projectLogo">
+              {{#ifEquals theme.mode "auto"}}
+                <source srcset="{{ theme.dark.logo }}" media="(prefers-color-scheme: dark)">
+                <source srcset="{{ theme.light.logo }}" media="(prefers-color-scheme: light)">
+              {{/ifEquals}}
+              <img
+                src="
+                  {{#ifEquals theme.mode "dark"}}{{ theme.dark.logo }}{{/ifEquals}}
+                  {{#ifEquals theme.mode "light"}}{{ theme.light.logo }}{{/ifEquals}}
+                  {{#ifEquals theme.mode "auto"}}{{ theme.light.logo }}{{/ifEquals}}
+                "
+                data-light="{{ theme.light.logo }}"
+                data-dark="{{ theme.dark.logo }}"
+                alt="{{ userProjectName }}"
+              >
+            </picture>
           {{/if}}
           <span class="Nav-projectName">Overview</span>
         </a>
@@ -49,6 +89,32 @@
           time.textContent = new Date(time.dateTime).toLocaleString();
         </script>
       {{/if}}
+
+      <form class="ThemeSwitcher">
+        <fieldset class="ThemeSwitcher-wrapper">
+          <legend class="ThemeSwitcher-title">Theme</legend>
+          <div class="ThemeSwitcher-options">
+            <div class="ThemeSwitcher-option">
+              <input type="radio" name="theme" value="light" id="theme-light"{{#ifEquals theme.mode "light"}} checked{{/ifEquals}}>
+              <label for="theme-light">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-labelledby="theme-light-title"><title id="theme-light-title">light</title><path d="M24 12.2v.2c-.2.4-.6.7-1.2.8H21c-.6 0-1.1-.6-1.1-1.2 0-.7.5-1.2 1.2-1.2h1.8c.6 0 1 .3 1.2.9v.5zM11.8 24h-.2c-.4-.2-.7-.6-.8-1.2V21c0-.6.6-1.1 1.2-1.1.7 0 1.2.5 1.2 1.2v1.8c0 .6-.3 1-.9 1.2h-.5zM12.2 0h.2c.4.2.7.6.8 1.2V3c0 .6-.6 1.1-1.2 1.1-.7 0-1.2-.5-1.2-1.1V1.2c0-.6.3-1 .9-1.1V0h.5zM0 11.8v-.2c.2-.4.6-.7 1.2-.8H3c.6 0 1.1.6 1.1 1.2 0 .7-.5 1.2-1.1 1.2H1c-.4 0-.8-.3-1-.8l-.1-.2v-.4zM12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zM4.4 20.9c-.6 0-1-.3-1.1-.7-.2-.5-.2-.9.1-1.2L5 17.3c.4-.4 1-.3 1.5.1.4.4.5 1 0 1.5l-1.4 1.6-.7.3zM3.2 4.3c0-.4.2-.8.6-1 .5-.2.9-.2 1.3.1L6.6 5c.4.4.3 1-.1 1.5-.4.4-1.1.5-1.5 0L3.4 5.2l-.3-.7zM19.6 3.2c.5 0 .9.2 1.1.6.2.5.2 1-.1 1.3L19 6.6c-.4.4-1 .3-1.5 0-.4-.5-.5-1.2 0-1.6l1.4-1.6.7-.3zM20.9 19.6c0 .5-.3.9-.7 1.1-.4.2-.9.2-1.2-.1L17.4 19c-.4-.4-.3-1 .1-1.5.4-.4 1.1-.5 1.5 0 .6.4 1 1 1.6 1.5l.3.6z"/></svg>
+              </label>
+            </div>
+            <div class="ThemeSwitcher-option">
+              <input type="radio" name="theme" value="dark" id="theme-dark"{{#ifEquals theme.mode "dark"}} checked{{/ifEquals}}>
+              <label for="theme-dark">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-labelledby="theme-dark-title"><title id="theme-dark-title">dark</title><path d="M17.2 18.4c1.9 0 3.6-.5 5.3-1.5.3-.2.5-.2.7 0 .2.1.2.4 0 .7-2 3.5-5 5.6-9 6.2A12.1 12.1 0 0 1 9.4.2c.4-.1.7 0 .8.2.2.2.1.5-.1.8a10.1 10.1 0 0 0 5.2 17l2 .2z"/></svg>
+              </label>
+            </div>
+            <div class="ThemeSwitcher-option">
+              <input type="radio" name="theme" value="auto" id="theme-auto"{{#ifEquals theme.mode "auto"}} checked{{/ifEquals}}>
+              <label for="theme-auto">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-labelledby="theme-auto-title"><title id="theme-auto-title">auto</title><path d="M24 2.3v14.5c-.3 1-1 1.2-1.7 1.2H1.5c-.3 0-.7-.1-1-.4-.3-.2-.4-.5-.5-.8V2.3c.2-.8.9-1.1 1.7-1.1h21c.4 0 .7.1 1 .5l.3.6z"/><path class="st0" d="M8.3 21.4H4.6c-.5 0-.8.3-.8.7 0 .4.3.7.8.7h14.8c.5 0 .8-.3.8-.7 0-.4-.3-.7-.8-.7h-3.7v-2H8.3v2z"/><path d="M8.3 21.4v-2h7.4v2H19.4c.5 0 .8.3.8.7 0 .4-.3.7-.8.7H4.6c-.5 0-.8-.3-.8-.7 0-.4.3-.7.8-.7h3.7z"/></svg>
+              </label>
+            </div>
+          </div>
+        </fieldset>
+      </form>
     </nav>
 
     <main class="Content">
